# pptx2md-cli

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
scripts/: install.sh
src/pptx2md_cli/: __init__.py  cli.py
