[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "pptx2md-cli"
version = "0.1.0"
description = "Modern CLI wrapper for pptx2md."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pptx2md>=0.2.0",
  "typer>=0.12.0",
  "wand>=0.6.12",
]

[project.scripts]
pptx2md = "pptx2md_cli.cli:run"

[project.urls]
Repository = "https://github.com/ssine/pptx2md"

[tool.hatch.build.targets.wheel]
packages = ["src/pptx2md_cli"]
